# llama-cli

./: .gitignore  LICENSE  PyPI.md  README.md  setup.cfg
llama/: Config.py  Filters.py  Llama.py  LlamaApi.py  LlamaStats.py  ProgSnap2.py  __init__.py  __main__.py  anonymize.py  config.py  consent.py  exclude.py  fetch.py  list.py  operations.py  plotting.py  privacy.py  shell.py  sources.py  status.py
llama/common/: Filters.py  __init__.py  dataframes.py  files.py  input.py  series.py
llama/types/: AbstractApi.py  AbstractDjangoApi.py  AcosJsonApi.py  AplusApi.py  AplusDataOps.py  Filters.py  MongodumpApi.py  __init__.py  acosjson.py  aplus.py  mongodump.py
test/: test_filters.py
