[metadata]
name = llama-cli
version = 0.0.1
author = Teemu Lehtinen
author_email = teemu.t.lehtinen@aalto.fi
description = Llama CLI fetches and preprocesses learning data
long_description = file: README.md
long_description_content_Type = text/markdown
url = https://github.com/teemulehtinen/llama-cli
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = ['llama']
install_requires = ['pandas']
python_requires = >=3.6
