[metadata]
name = llama-cli
version = 1.0.4
author = Teemu Lehtinen
description = Llama CLI fetches and preprocesses learning data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/teemulehtinen/llama-cli
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.6
install_requires =
    pandas
    requests
packages = llama, llama.common, llama.types

[options.entry_points]
console_scripts =
    llama = llama:main
